--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div id="opcion3" class="message">
         <h3>¡Enhorabuena! Has encontrado el premio. 🎉</h3>
          Este es un vale por una cena romántica en tu restaurante favorito. 🍽️💖 Espero con ansias nuestra noche especial juntos.
-        <br><a href="https://edwinains.github.io/RosaCristal/">Aquí lo tienes</a>
+        <br><a href="https://edwinains.github.io/RosaCristal/" class="button">Aquí lo tienes</a>
     </div>
 </div>
 
