--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div id="opcion2" class="message">¡Ups! Aún no encuentras el premio. Sigue buscando, ¡vale la pena! 💪</div>
     <div id="opcion3" class="message">
         <h3>¡Enhorabuena! Has encontrado el premio. 🎉</h3>
-         Este es un vale por una cena romántica en tu restaurante favorito. 🍽️💖 Espero con ansias nuestra noche especial juntos.
+         Este es un "si" para una cena romántica en tu restaurante favorito. 🍽️💖 Espero con ansias nuestra noche especial juntos.
         <br><a href="https://edwinains.github.io/RosaCristal/" class="button">Aquí lo tienes</a>
     </div>
 </div>
